add missing fiels in course 1

--- a/Neural Networks and Deep Learning/Building your Deep Neural Network - Step by Step.ipynb
+++ b/Neural Networks and Deep Learning/Building your Deep Neural Network - Step by Step.ipynb
@@ -43,17 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
-    "from testCases import *\n",
-    "from dnn_utils import sigmoid, sigmoid_backward, relu, relu_backward\n",
+    "from testCases_v4 import *\n",
+    "from dnn_utils_v2 import sigmoid, sigmoid_backward, relu, relu_backward\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
@@ -119,10 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: initialize_parameters\n",
@@ -166,9 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -178,10 +173,10 @@
      "text": [
       "W1 = [[ 0.01624345 -0.00611756]\n",
       " [-0.00528172 -0.01072969]]\n",
-      "b1 = [[ 0.]\n",
-      " [ 0.]]\n",
+      "b1 = [[0.]\n",
+      " [0.]]\n",
       "W2 = [[ 0.00865408 -0.02301539]]\n",
-      "b2 = [[ 0.]]\n"
+      "b2 = [[0.]]\n"
      ]
     }
    ],
@@ -271,7 +266,7 @@
     "        <td> $\\vdots$  </td> \n",
     "    <tr>\n",
     "    \n",
-    "   <tr>\n",
+    "    <tr>\n",
     "        <td> **Layer L-1** </td> \n",
     "        <td> $(n^{[L-1]}, n^{[L-2]})$ </td> \n",
     "        <td> $(n^{[L-1]}, 1)$  </td> \n",
@@ -280,7 +275,7 @@
     "    <tr>\n",
     "    \n",
     "    \n",
-    "   <tr>\n",
+    "    <tr>\n",
     "        <td> **Layer L** </td> \n",
     "        <td> $(n^{[L]}, n^{[L-1]})$ </td> \n",
     "        <td> $(n^{[L]}, 1)$ </td>\n",
@@ -337,9 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: initialize_parameters_deep\n",
@@ -375,9 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -476,9 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: linear_forward\n",
@@ -510,9 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -576,9 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: linear_activation_forward\n",
@@ -622,9 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -694,9 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: L_model_forward\n",
@@ -750,9 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -807,9 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: compute_cost\n",
@@ -842,9 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -973,9 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1099,9 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1286,9 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1402,9 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1533,7 +1500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
